// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentFolder: Test blog/page-1 Check contentPlugin render 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="generator">
    <meta charset="utf-8">
    <title>
      sample-blog
    </title>
    <base href="/">
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link rel="icon"
          type="image/x-icon"
          href="favicon.ico"
    >
    <link rel="stylesheet"
          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css"
    >
    <link rel="stylesheet"
          href="styles.css"
    >
    <style>
      []{display:grid;height:100vh;grid-template-rows:60px 1fr 60px}[] > header[]{display:grid;background-color:#4169e1;color:#f5f5f5;margin:0;padding:0 10px;grid-template-columns:1fr 40px;place-items:center center}footer[]   h3[], header[]   h1[]{margin:0}[] > footer[]{display:grid;background-color:#4169e1;color:#f5f5f5;margin:0;padding-right:10px;justify-content:right;align-content:center}main[]{background-color:#f5f5f5;color:#040c24;padding:10px}
    </style>
    <style>
      h1[]{background-color:#4169e1;color:#fff;width:100%;text-align:center;padding:5px;border-radius:8px;margin-top:.4rem;margin-bottom:.4rem}
    </style>
    <style>
      :host {
        display: none;
      }
      scully-content {
        display: none;
      }
    </style>
  </head>
  <body>
    <app-root class="foo"
              =""
    >
      Scully demo blog app!
      <small ="">
        rendering inside scully
      </small>
      <a =""
         href="/home/"
      >
        🏠
      </a>
      <main ="">
        <router-outlet ="">
        </router-outlet>
        <app-blog-holder>
          <h3>
            Scully blog content
          </h3>
          <hr>
          <router-outlet>
          </router-outlet>
          <app-blog ="">
            <h1 id="page-1"
                =""
            >
              Page 1
            </h1>
            <h2 id="or-how-to-do-interesting-blog-things"
                =""
            >
              or, how to do interesting blog things
            </h2>
            <pre class="language-typescript"
                 =""
            >
              <code class="language-typescript"
                    =""
              >
                <span class="token builtin"
                      =""
                >
                  console
                </span>
                <span class="token punctuation"
                      =""
                >
                  .
                </span>
                <span class="token function"
                      =""
                >
                  log
                </span>
                <span class="token punctuation"
                      =""
                >
                  (
                </span>
                <span class="token string"
                      =""
                >
                  'hello world'
                </span>
                <span class="token punctuation"
                      =""
                >
                  )
                </span>
                <span class="token punctuation"
                      =""
                >
                  ;
                </span>
                <span class="token builtin"
                      =""
                >
                  console
                </span>
                <span class="token punctuation"
                      =""
                >
                  .
                </span>
                <span class="token function"
                      =""
                >
                  log
                </span>
                <span class="token punctuation"
                      =""
                >
                  (
                </span>
                <span class="token string"
                      =""
                >
                  'yah'
                </span>
                <span class="token punctuation"
                      =""
                >
                  )
                </span>
                <span class="token punctuation"
                      =""
                >
                  ;
                </span>
                <span class="token keyword"
                      =""
                >
                  const
                </span>
                x
                <span class="token operator"
                      =""
                >
                  =
                </span>
                <span class="token number"
                      =""
                >
                  123
                </span>
                <span class="token punctuation"
                      =""
                >
                  ;
                </span>
              </code>
            </pre>
            <p ="">
              Hello Dolly?
            </p>
            <p ="">
              Related information
              <a href="/blog/___UNPUBLISHED___k5nhcflm_SJwD4Z0QDrIHg1PGHo2mrfLZE8sfUsPy/"
                 =""
              >
                page-2
              </a>
            </p>
            <p ="">
              <a href="/content/two/"
                 =""
              >
                content page
              </a>
            </p>
            <h1 id="down-under"
                =""
            >
              Down-under
            </h1>
            <p ="">
              <a href="/home/"
                 =""
              >
                site-map
              </a>
            </p>
            <scully-content ="">
            </scully-content>
          </app-blog>
          <hr>
          <h4>
            End of blog content
          </h4>
          <span>
            <a href="/blog/2014/2/12/asdf/">
              /blog/2014/2/12/asdf
            </a>
            <br>
          </span>
          <span>
            <a href="/blog/page-1/">
              /blog/page-1
            </a>
            <br>
          </span>
          <span>
            <a href="/blog/page-3/">
              /blog/page-3
            </a>
            <br>
          </span>
          <span>
            <a href="/blog/page-4/">
              /blog/page-4
            </a>
            <br>
          </span>
          <span>
            <a href="/blog/page-4/">
              /blog/page-4
            </a>
            <br>
          </span>
          <span>
            <a href="/blog/page-5/">
              /blog/page-5
            </a>
            <br>
          </span>
          <span>
            <a href="/blog/test/testing/">
              /blog/test/testing
            </a>
            <br>
          </span>
        </app-blog-holder>
      </main>
      <footer ="">
        <h3 ="">
          Made with ❤️
          <strong ="">
            @HeroDevs
          </strong>
        </h3>
      </footer>
    </app-root>
  </body>
</html>
`;

exports[`Static: Test blog index Check clean blog index by scully 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta name="generator">
    <meta charset="utf-8">
    <title>
      sample-blog
    </title>
    <base href="/">
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link rel="icon"
          type="image/x-icon"
          href="favicon.ico"
    >
    <link rel="stylesheet"
          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css"
    >
    <link rel="stylesheet"
          href="styles.css"
    >
    <style>
      []{display:grid;height:100vh;grid-template-rows:60px 1fr 60px}[] > header[]{display:grid;background-color:#4169e1;color:#f5f5f5;margin:0;padding:0 10px;grid-template-columns:1fr 40px;place-items:center center}footer[]   h3[], header[]   h1[]{margin:0}[] > footer[]{display:grid;background-color:#4169e1;color:#f5f5f5;margin:0;padding-right:10px;justify-content:right;align-content:center}main[]{background-color:#f5f5f5;color:#040c24;padding:10px}
    </style>
    <style>
      []{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}[]   h1[]:first-child{grid-column:span 3;text-align:center}article[]{background-color:#4169e1;padding:5px;border-radius:5px;color:#f5f5f5}
    </style>
  </head>
  <body>
    <app-root class="foo"
              =""
    >
      Scully demo blog app!
      <small ="">
        rendering inside scully
      </small>
      <a =""
         href="/home/"
      >
        🏠
      </a>
      <main ="">
        <router-outlet ="">
        </router-outlet>
        <app-blog-list ="">
          <h1 ="">
            Overview of blog posts
          </h1>
          <a =""
             href="/blog/2014/2/12/asdf/"
          >
            <article ="">
              <h3 ="">
                Deeply embedded
              </h3>
              <h4 ="">
                11/27/19
              </h4>
              <p ="">
                This is the deep folder demo page in this sample.
              </p>
            </article>
          </a>
          <a =""
             href="/blog/page-1/"
          >
            <article ="">
              <h3 ="">
                My first page
              </h3>
              <h4 ="">
                11/26/19
              </h4>
              <p ="">
                This is the first demo page in this sample.
              </p>
            </article>
          </a>
          <a =""
             href="/blog/page-3/"
          >
            <article ="">
              <h3 ="">
                My third page
              </h3>
              <h4 ="">
                11/28/19
              </h4>
              <p ="">
                At this point, I should write something different in here.
              </p>
            </article>
          </a>
          <a =""
             href="/blog/page-4/"
          >
            <article ="">
              <h3 ="">
                The Rainbow Cat, A free book out of the Guttenberg library
              </h3>
              <h4 ="">
                12/16/19
              </h4>
              <p ="">
              </p>
            </article>
          </a>
          <a =""
             href="/blog/page-4/"
          >
            <article ="">
              <h3 ="">
                My foutrh page
              </h3>
              <h4 ="">
                1/1/20
              </h4>
              <p ="">
                This is the second demo page in this sample.
              </p>
            </article>
          </a>
          <a =""
             href="/blog/page-5/"
          >
            <article ="">
              <h3 ="">
                /blog/page-5
              </h3>
              <h4 ="">
              </h4>
              <p ="">
              </p>
            </article>
          </a>
          <a =""
             href="/blog/test/testing/"
          >
            <article ="">
              <h3 ="">
                My test sub page
              </h3>
              <h4 ="">
                11/27/19
              </h4>
              <p ="">
                This is the second demo page in this sample.
              </p>
            </article>
          </a>
        </app-blog-list>
      </main>
      <footer ="">
        <h3 ="">
          Made with ❤️
          <strong ="">
            @HeroDevs
          </strong>
        </h3>
      </footer>
    </app-root>
  </body>
</html>
`;
